Edited hero page; Fix responsiveness issue on mobile devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,7 +100,7 @@ h3 {
 }
 
 #intro-text p {
-    text-align: left;
+    text-align: center;
     margin-bottom: 1.5rem;
     font-size: 0.9rem;
     font-weight: 300;
@@ -225,7 +225,9 @@ button:hover {
     display: flex;
     overflow-x: auto; 
     scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;  
+    scroll-behavior: smooth; 
+    box-sizing: border-box;
+    box-shadow: #D9D9D9 2px 5px 5px;
 }
 
 .item-instock,
@@ -234,6 +236,13 @@ button:hover {
     scroll-snap-align: start;
     padding: 0 1rem;
     width: 100%;
+}
+
+@media (max-width: 600px) {
+    .stock-item,
+    .expire-item {
+        width: 70vw;
+    }
 }
 
 .stock-item .item-content,
